--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ theme: minima
 #remote_theme: pages-themes/tactile@v0.2.0
 plugins:
   - jekyll-feed
+exclude: ['READEME.md']
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
