--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,6 @@ theme: minima
 #remote_theme: pages-themes/tactile@v0.2.0
 plugins:
   - jekyll-feed
-exclude: ['READEME.md']
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -50,3 +49,4 @@ exclude: ['READEME.md']
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+#   - README.md
